--- a/main.ipynb
+++ b/main.ipynb
@@ -4,8 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initialization\n",
-    "## Libraries"
+    "# Initialization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load libraries"
    ]
   },
   {
@@ -34,23 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load environment variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_ = load_dotenv()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Constants"
+    "## Set constants"
    ]
   },
   {
@@ -61,6 +51,22 @@
    "source": [
     "INFORMATION_PATH = \"pdfs\"\n",
     "INDEX_NAME = \"pinecone-test\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load environment variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = load_dotenv()"
    ]
   },
   {
@@ -85,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initialize OpenAI connection"
+    "# Initialize OpenAI LLM connection"
    ]
   },
   {
@@ -125,30 +131,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'GPT-4 Technical Report\\nOpenAI∗\\nAbstract\\nWe report the development of GPT-4, a large-scale, multimodal model which can\\naccept image and text inputs and produce text outputs. While less capable than\\nhumans in many real-world scenarios, GPT-4 exhibits human-level performance\\non various professional and academic benchmarks, including passing a simulated\\nbar exam with a score around the top 10% of test takers. GPT-4 is a Transformer-'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text_chunks[0].page_content"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set up embedding"
+    "# Set up OpenAI embedding"
    ]
   },
   {
@@ -202,6 +188,20 @@
    "source": [
     "query=\"What is the key vector?\"\n",
     "doc_search.similarity_search(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use the Vector DB for Retrieval-Augmented Generation (RAG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up retriever"
    ]
   },
   {
